force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/npe03__Recurring_Donations_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the Recurring Donations Package</description>
    <label>Configuración de Donaciones recurrentes</label>
</CustomObject>