force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/npe03__Last_Batch_Run__c.field-meta.xml
<CustomField>
    <fullName>npe03__Last_Batch_Run__c</fullName>
    <inlineHelpText>La fecha y la hora de la última actualización de lote de Donaciones recurrentes.</inlineHelpText>
    <label>Last Batch Run</label>
    <type>DateTime</type>
</CustomField>