force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/npe03__Maximum_Donations__c.field-meta.xml
<CustomField>
    <fullName>npe03__Maximum_Donations__c</fullName>
    <defaultValue>50</defaultValue>
    <inlineHelpText>Restringe la cantidad total de donaciones creadas para donaciones recurrentes sin finalización definida. El valor predeterminado es 50. Un valor mayor puede dar como resultado errores DML.</inlineHelpText>
    <label>Maximum Donations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>