force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/npe03__Number_of_Successes__c.field-meta.xml
<CustomField>
    <fullName>npe03__Number_of_Successes__c</fullName>
    <inlineHelpText>Cantidad de donaciones recurrentes que se actualizaron correctamente en la última ejecución del lote.</inlineHelpText>
    <label>Number of Successes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>