force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/npe03__Open_Opportunity_Behavior__c.field-meta.xml
<CustomField>
    <fullName>npe03__Open_Opportunity_Behavior__c</fullName>
    <description>Determines the behavior of any remaining open Opportunities when an open-ended Recurring Donation is moved to a closed status.</description>
    <inlineHelpText>Determina el comportamiento de las oportunidades abiertas restantes cuando una donación recurrente sin finalización definida cambia su estado a cerrada.</inlineHelpText>
    <label>Open Opportunity Behavior on RD Close</label>
    <length>50</length>
    <type>Text</type>
</CustomField>