force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/npe03__Opportunity_Forecast_Months__c.field-meta.xml
<CustomField>
    <fullName>npe03__Opportunity_Forecast_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Number of months worth of open Opportunities to be created when using an open-ended Recurring Donation.  Determined by the Last Payment Date field.</description>
    <inlineHelpText>Cantidad de meses desde hoy con oportunidades abiertas que se crearán con donaciones recurrentes sin finalización definida. ADVERTENCIA: Al reducirlo se eliminarán oportunidades adicionales. Al aumentarlo iniciará in proceso para agregar oportunidades.</inlineHelpText>
    <label>Opportunity Forecast Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>