force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/npe03__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>npe03__Record_Type__c</fullName>
    <description>Opportunity Record Type used when Recurring Donation Opportunities are created.</description>
    <inlineHelpText>Tipo de registro de oportunidad empleado cuando se crean oportunidades de donaciones recurrentes.</inlineHelpText>
    <label>Opportunity Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>