force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/npsp__ExcludeClosedRecurringDonations__c.field-meta.xml
<CustomField>
    <fullName>npsp__ExcludeClosedRecurringDonations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude Closed Recurring Donations from the Recurring Donation Opportunity Evaluation batch job.</description>
    <inlineHelpText>Excluye donaciones recurrentes cerradas desde el trabajo por lotes Evaluación de oportunidad de donación recurrente.</inlineHelpText>
    <label>Exclude Closed Recurring Donations</label>
    <type>Checkbox</type>
</CustomField>