force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/npsp__StatusAutomationDaysForClosed__c.field-meta.xml
<CustomField>
    <fullName>npsp__StatusAutomationDaysForClosed__c</fullName>
    <description>After the specified number of days, NPSP updates the Recurring Donation Status to the Status Automation Closed Value if donations aren&apos;t being received as expected.</description>
    <inlineHelpText>Después del número especificado de tías, NPSP actualiza Estado de Donación recurrente a Valor cerrado de automatización estado si las donaciones no se están recibiendo como se esperaba.</inlineHelpText>
    <label>Status Automation Days for Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>