force-app/main/default/objects/npe03__Recurring_Donations_Settings__c/fields/npsp__StatusAutomationLapsedValue__c.field-meta.xml
<CustomField>
    <fullName>npsp__StatusAutomationLapsedValue__c</fullName>
    <description>The Recurring Donation Status set when Status Automation updates the Recurring Donation record as Lapsed.</description>
    <inlineHelpText>El Estado de Donación recurrente establecido cuando Automatización de estado actualiza el registro Donación recurrente como Transcurrido.</inlineHelpText>
    <label>Status Automation Lapsed Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>